--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "pypdf (>=5.8.0,<6.0.0)",
     "faiss-cpu (>=1.11.0.post1,<2.0.0)",
     "tiktoken (>=0.9.0,<0.10.0)",
-    "python-dotenv (>=1.1.1,<2.0.0)"
+    "python-dotenv (>=1.1.1,<2.0.0)",
+    "langchain-google-vertexai (>=2.0.27,<3.0.0)",
+    "google-cloud-aiplatform (>=1.103.0,<2.0.0)"
 ]
 
 
