--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ __pycache__/
 # Environment variables
 .env
 
+#secrets
+client_secret.json
+
 # Streamlit-specific cache and temporary files
 .streamlit/
 temp_pdfs/ # Directory where temporary PDFs are stored during processing
