--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "rag-pdf-chatbot"
+name = "app"
 version = "0.1.0"
 description = ""
 authors = [
@@ -10,14 +10,12 @@ requires-python = ">=3.13,<4.0"
 dependencies = [
     "langchain (>=0.3.26,<0.4.0)",
     "langchain-community (>=0.3.27,<0.4.0)",
-    "langchain-openai (>=0.3.28,<0.4.0)",
-    "streamlit (>=1.46.1,<2.0.0)",
+    "langchain-google-genai (>=2.1.8,<3.0.0)",
+    "streamlit (>=1.47.0,<2.0.0)",
     "pypdf (>=5.8.0,<6.0.0)",
     "faiss-cpu (>=1.11.0.post1,<2.0.0)",
     "tiktoken (>=0.9.0,<0.10.0)",
-    "python-dotenv (>=1.1.1,<2.0.0)",
-    "langchain-google-vertexai (>=2.0.27,<3.0.0)",
-    "google-cloud-aiplatform (>=1.103.0,<2.0.0)"
+    "python-dotenv (>=1.1.1,<2.0.0)"
 ]
 
 
